@@ -1,0 +1,11 @@
+<?php
+/**
+ * @package Include/help/ja
+ */
+?>
+<h1>拡張レポート</h1>
+<p>
+_DATETIME_ マクロは、最初のページで利用できます。これは、PDF を生成した時点の日時に置き換えられます。
+<br><br>
+画像ファイルの読み込みで問題がある場合は、JPG 等のフォーマットではなく、PNG フォーマットを使ってみてください。
+</p>
