@@ -1,3 +1,8 @@
+2011-05-06  Junichi Satoh  <junichi@rworks.jp>
+
+	* include/help/ja/help_reporting_advanced_tab.php: Added a missing
+	help file.
+
 2011-05-04 Vanessa Gil <vanessa.gil@artica.es>
 
 	*  operation/agentes/estado_agente.php: Fixed error on list of agents
